# genro-office

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  excel.rst  getting-started.rst  index.rst  word.rst
examples/excel/advanced/: README.md  main.py  output.xlsx
examples/excel/basic/: README.md  main.py  output.xlsx
examples/excel/components/: main.py
examples/excel/formulas/: README.md  main.py  output.xlsx
examples/excel/styled/: README.md  main.py  output.xlsx
examples/word/advanced/: README.md  main.py  output.docx
examples/word/basic/: README.md  main.py  output.docx
examples/word/components/: main.py
examples/word/letter/: README.md  main.py  output.docx
examples/word/report/: README.md  main.py  output.docx
src/genro_office/: __init__.py  excel_app.py  word_app.py
src/genro_office/builders/: __init__.py  excel_builder.py  word_builder.py
src/genro_office/compilers/: __init__.py  excel_compiler.py  word_compiler.py
tests/: __init__.py  test_excel_app.py  test_word_app.py
